extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/parser/exerr2.out
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/parser/exerr2.obr:11:7:error: keyword "DO" found where variable name expected
      Result := 0;
      ^
